initial class lessons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Lesson</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h3>Welcome to Tigers Gomycode Class</h3>
+
+<body >
+    <header class="box">
+        <p id="helo" class="here"> Helooo</p>
+    </header>
+    <h3 id="heading-one">Welcome to Tigers Gomycode Class</h3>
+    <br>
     <p> Welcome everyone</p>
+    <input type="file" />
+    <img src="/workspace.jpeg" alt="workspace image">
+    <a href="#heading-one" target="_blank">Link to another</a>
+    <audio controls>
+        <source src="test.mp3" type="audio/mpeg">
+        Please Check the audio Extension
+    </audio>
+    <video width="320" height="240" autoplay controls>
+        <source src="test.mp4" type="video/mp4" />
+        Please Check the video extension.
+    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zYKJdzyAviE?si=6yJjQOYSs_gw6x9q"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+    <h3>Products/Services that we offer</h3>
+    <ul class="box">
+        <li>Web Services</li>
+        <li>Mobile Services</li>
+        <li>Cloud Services</li>
+        <li>AI Services</li>
+    </ul>
+    <h3>Our Team</h3>
+    <ol type="i">
+        <li>John Doe</li>
+        <li>Jane Smith</li>
+        <li>Emily Johnson</li>
+        <li>Michael Brown</li>
+        <li>Sarah Davis</li>
+    </ol>
+
+    <p>The House Sigils In GOT:</p>
+
+    <dl>
+        <dt>House Stark</dt>
+        <dd>The Direwolf</dd>
+
+        <dt>House Lannister</dt>
+        <dd>The Lion</dd>
+
+        <dt>House Targaryen</dt>
+        <dd>The Three-Headed Dragon</dd>
+
+        <dt>House Baratheon</dt>
+        <dd>The Stag</dd>
+    </dl>
+    <div>
+        <h3>Hello</h3>
+        <p>This is a paragraph inside a div.</p>
+    </div>
+    <table border="1">
+        <tr>
+            <th>HTML</th>
+            <th>CSS</th>
+            <th>JS</th>
+        </tr>
+        <tr>
+            <td>Paragraphs</td>
+            <td>Selectors</td>
+            <td>DOM</td>
+        </tr>
+        <tr>
+            <td>Tables</td>
+            <td>Styles</td>
+            <td>Elements</td>
+        </tr>
+    </table>
+     <textarea name="message" cols="30" rows="5">
+        Welcome to GoMyCode
+    </textarea>
 </body>
+
 </html>
+<!-- jfjjjcj -->
