--- a/project/delish.html
+++ b/project/delish.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DelishBite Restaurant</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"> -->
     <link rel="stylesheet" href="/project/delish.css">
 </head>
 
@@ -18,6 +19,15 @@
             <a href="#contact">Contact</a>
         </nav>
         <!-- mobile nav -->
+        <div class="hamburger" id="hamburger">
+            &#9776;
+        </div>
+        <nav class="mobile-nav" id="mobileNav">
+            <a href="#menu">Menu</a>
+            <a href="#featured">Featured</a>
+            <a href="#stores">Stores</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <!-- Hero Section -->
     <section class="hero">
@@ -141,6 +151,34 @@
             <button>Order Now</button>
         </div>
     </section>
+
+    <!-- Stores Section -->
+    <section class="section" id="stores">
+        <h2>Our Stores Nationwide</h2>
+        <div class="grid-stores">
+            <div class="store">Lagos - Ikeja</div>
+            <div class="store">Lagos - Lekki</div>
+            <div class="store">Abuja - Wuse</div>
+            <div class="store">Port Harcourt - GRA</div>
+        </div>
+    </section>
+
+    <footer id="contact">
+        <p>&copy; 2025 DelishBite. All rights reserved.</p>
+        <div class="socials">
+            <a href="https://gomycode.com/ng/" target="_blank">Facebook</a>
+            <!-- <a href="#" target="_blank"><i class="fab fa-facebook"></i></a> -->
+            <i class="fa-solid fa-bars"></i>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">Twitter</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
+    </footer>
+    <script>
+        const hamburger = document.getElementById("hamburger");
+        const mobileNav = document.getElementById("mobileNav");
+        hamburger.addEventListener("click", () => {mobileNav.classList.toggle("open")})
+    </script>
 </body>
 
 </html>
