--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Lessons </title>
-    <script src="/javascript/app.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h3>JavaScript Lessons</h3>
-    
+    <p id="first" class="box container">First Paragraph</p>
+    <div>
+        <h3 id="intro">Sub group</h3>
+        <p>Content of sub group</p>
+    </div>
+    <div style="margin-bottom: 1rem;">
+        <h3>List of fruits</h3>
+        <ul>
+            <li>Apple</li>
+        </ul>
+        <input type="text" name="fruit-name" id="fruit-name">
+        <button id="add-fruit">Add Fruit</button>
+    </div>
+    <input type="date">
+    <button id="select-me">click me</button>
+    <button id="btn">Change Style</button>
+    <script src="/javascript/script.js"></script>
 </body>
 </html>
