--- a/javascript/projects/form/index.html
+++ b/javascript/projects/form/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="container">
         <!-- Registration Form -->
-        <form class="form" id="registerForm">
+        <form class="form active" id="registerForm">
             <h2>Register</h2>
-            <input type="text" id="regName" placeholder="Full Name" required>
-            <input type="email" id="regEmail" placeholder="Email" required>
+            <input type="text" id="regName" placeholder="Full Name" required name="regN">
+            <input type="email" id="regEmail" placeholder="Email" required name="regE">
             <input type="password" id="regPassword" placeholder="Password" required>
             <button type="submit">Sign Up</button>
             <p>Already have an account? <span class="toggle" data-form="login">Login here</span></p>
         </form>
 
         <!-- Login Form -->
-        <form class="form active" id="loginForm">
+        <form class="form" id="loginForm">
             <h2>Login</h2>
             <input type="email" id="loginEmail" placeholder="Email" required>
             <input type="password" id="loginPassword" placeholder="Password" required>
@@ -29,6 +29,7 @@
             <p>Don't have an account? <span class="toggle" data-form="register">Register here</span></p>
         </form>
     </div>
+    <script src="./form.js"></script>
 </body>
 
 </html>
