--- a/javascript/projects/shopping-card/index.html
+++ b/javascript/projects/shopping-card/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="list-products">
                 <!-- Product 1 : baskets -->
-                <div class="card-body">
+                <div class="card-body wrapper">
                     <div class="card" style="width: 18rem">
                         <img src="./assets/baskets.png" class="card-img-top" alt="baskets" />
                         <div class="card-body">
@@ -93,7 +93,7 @@
                 </div>
                 <!-- Product 2 : socks -->
 
-                <div class="card-body">
+                <div class="card-body wrapper">
                     <div class="card" style="width: 18rem">
                         <img src="./assets/socks.png" class="card-img-top" alt="socks" />
                         <div class="card-body">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <!-- Product 3 : bag -->
-                <div class="card-body">
+                <div class="card-body wrapper">
                     <div class="card" style="width: 18rem">
                         <img src="./assets/bag.png" class="card-img-top" alt="bag" />
                         <div class="card-body">
